--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
-body {background-color :#D9CF43;
-      color: #F2F2F2;
-}
-
-#titulo {
-    color: #8C3503;
-    text-align:center;
-    font-size: 40px;
-}
-.texto1 {
-    color: #8C3503;
-    text-align:justify;
-    font-size: 28px;
-    font-family: Lucida Sans;
-}
-
-.texto2 {
-    color: #8C3503;
-    text-align:justify;
-    font-size: 38px;
-    font-family: Lucida Sans;
-}
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8">
+  <title>Geometrias Não Euclidianas</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1 id="titulo">Geometrias Não Euclidianas</h1>
+    <img src="bolha 2.jpeg" alt="bolha congelando, superficie esférica">
+    <p class="texto1">O conhecimento escolar de <strong>Geometria</strong>, por muito tempo nos trouxe a <b>Geometria de Euclides</b>.
+    Aprendemos o que é um ponto, uma reta e um plano.
+    A partir destes elementos, construímos <mark>Figuras Geométricas Planas e Formas Espaciais.</mark></p>
+    <br>
+    <p class="texto2">O alcance do ser humano ao conhecimento do nosso planeta a partir de tecnologias trouxe a necessidade e a “descoberta” de novas superfícies e portanto novos planos geométricos.</p>
+</body>
+</html>
